# B-pog-translator

./: .gitignore  Makefile  README.md  bwhy_prelude.why  checker.ml  dune  dune-project  expression.ml  lp.ml  main.ml  parser.ml  pog2why.ml  pogparser.ml  pogtranslator.opam  printer.ml  script.ml  syntax.ml  whyutils.ml
b/: lambdapi.pkg  syntax.dk  syntax.lp
example/: cantor.mch  cantor.po  cantor.pog
